ex noté .2
